--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     .container {
       max-width: 500px;
+      width: 100%;
+      margin: 0 auto;
     }
 
     h1 {
@@ -32,6 +34,12 @@
       margin-bottom: 24px;
     }
 
+    #lottie {
+      height: 220px;
+      margin: 0 auto 32px auto;
+      display: block;
+    }
+
     button {
       padding: 12px 28px;
       font-size: 18px;
@@ -41,7 +49,14 @@
       color: #fff;
       cursor: pointer;
     }
+
+    button:hover {
+      opacity: 0.9;
+    }
   </style>
+
+  <!-- Lottie player (pro .lottie soubory) -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
 
@@ -49,22 +64,17 @@
     <h1>404</h1>
     <p>Stránka nenalezena</p>
 
-    <div id="lottie" style="height:200px;"></div>
+    <lottie-player
+      id="lottie"
+      src="./animation.lottie"
+      background="transparent"
+      speed="1"
+      loop
+      autoplay>
+    </lottie-player>
 
-    <button onclick="location.href='/'">Zpět domů</button>
+    <button onclick="location.href='./'">Zpět domů</button>
   </div>
-
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-<lottie-player
-  src="./animation.lottie"
-  background="transparent"
-  speed="1"
-  loop
-  autoplay
-  style="height:200px;">
-</lottie-player>
-
 
 </body>
 </html>
