--- a/404.html
+++ b/404.html
@@ -2,60 +2,73 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>404 – Stránka nenalezena</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 – Stránka nenalezena</title>
 
+  <!-- CSS přímo v HTML -->
   <style>
+    /* Základní layout */
     body {
       margin: 0;
-      background: #0F1015;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
       height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       text-align: center;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #0F1015, #1A1B29);
+      color: #ffffff;
+      overflow: hidden;
     }
 
     .container {
-      max-width: 500px;
+      max-width: 600px;
       width: 100%;
-      margin: 0 auto;
+      padding: 20px;
     }
 
     h1 {
-      font-size: 140px;
+      font-size: 15vw; /* responsivní velikost čísla 404 */
       margin: 0;
+      font-weight: bold;
     }
 
     p {
-      font-size: 24px;
-      margin-bottom: 24px;
+      font-size: 4vw;
+      margin-bottom: 32px;
     }
 
     #lottie {
-      height: 220px;
+      width: 300px;
+      height: 300px;
       margin: 0 auto 32px auto;
       display: block;
     }
 
     button {
-      padding: 12px 28px;
+      padding: 14px 32px;
       font-size: 18px;
       border: none;
-      border-radius: 6px;
-      background: #FF5470;
+      border-radius: 8px;
+      background: linear-gradient(45deg, #FF5470, #FF8A5B);
       color: #fff;
       cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
 
     button:hover {
-      opacity: 0.9;
+      transform: translateY(-3px);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+    }
+
+    @media (max-width: 500px) {
+      h1 { font-size: 25vw; }
+      p { font-size: 5vw; }
+      #lottie { width: 220px; height: 220px; }
     }
   </style>
 
-  <!-- Lottie player (pro .lottie soubory) -->
+  <!-- Lottie player pro .lottie soubory -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
@@ -64,6 +77,7 @@
     <h1>404</h1>
     <p>Stránka nenalezena</p>
 
+    <!-- Animace Lottie -->
     <lottie-player
       id="lottie"
       src="./animation.lottie"
@@ -71,8 +85,10 @@
       speed="1"
       loop
       autoplay>
+      Stránka načítá animaci...
     </lottie-player>
 
+    <!-- Tlačítko zpět domů -->
     <button onclick="location.href='./'">Zpět domů</button>
   </div>
 
