--- a/404.html
+++ b/404.html
@@ -75,19 +75,12 @@
     <h1>404</h1>
     <p>Stránka nenalezena</p>
 
-    <!-- Animace Lottie -->
-    <lottie-player
-      id="lottie"
-      src="./animation.json"
-      background="transparent"
-      speed="1"
-      loop
-      autoplay>
-      Stránka načítá animaci...
-    </lottie-player>
+<script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+<dotlottie-wc src="https://lottie.host/223b6290-a291-4159-9896-b1c36ca2d1c1/QKcsLehxOv.lottie" style="width: 300px;height: 300px" autoplay loop></dotlottie-wc>
 
     <button onclick="location.href='./'">Zpět domů</button>
   </div>
 
 </body>
 </html>
+
